kubernetes/grpcserver-service.yml
apiVersion: v1
kind: Service
metadata:
  name: grpcserver-svc
spec:
  selector:
    app: grpcserver	
    type: back-end	
  ports:
  - protocol: TCP
    port: 50051
    targetPort: 50051
