kubernetes/webserver-service.yml
apiVersion: v1
kind: Service
metadata:
  name: webserver-svc
spec:
  selector:
    app: webserver			
    type: front-end			
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
