kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: comm-lb
  namespace: commapp	
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/load-balancer-name: comm-lb
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":8080}]'
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /message
        pathType: Prefix
        backend:
          service:
            name: webserver-svc	
            port:
              number: 8080
